# sweph

./: .gitignore  CMakeLists.txt  README.md  swedll32.vcxproj  swedlltrm.vcxproj  swedlltrs.vcxproj  swelib32.vcxproj  sweph.sln  swete32.vcxproj  swetest.vcxproj  swetrace.sln  swetrace.vcxproj  swewin32.vcxproj
VisualStudio/: swedll32.sln  swedll32.vcxproj  swedlltrm.sln  swedlltrm.vcxproj  swedlltrs.sln  swedlltrs.vcxproj  swelib32.sln  swelib32.vcxproj  sweph.sln  swetest.sln  swetest.vcxproj  swetrace.vcxproj  swewin32.sln  swewin32.vcxproj
doc/: swephprg.2.10.htm  swephprg.htm  swisseph.htm
src/: .gitignore  swedllst.c  sweph.c
